# nasa-exoplanet-query

./: .gitignore  README.md  pyproject.toml  settings.yaml
core/: settings.py  urls.py
search/: command_line.py  forms.py  handlers.py  helpers.py  models.py  tests.py  urls.py  views.py
search/management/commands/: build_static_files.py  populate_database.py
search/migrations/: 0001_initial.py  0002_auto_20210622_0052.py  0003_auto_20210622_1619.py
search/static/search/bootstrap-5.0.2/: package-lock.json
search/static/search/bootstrap-5.0.2/scss/: _variables.scss
search/templates/search/: base.html  index.html  list.html  upload_csv.html
