[tool.poetry]
name = "nasa-exoplanet-query"
version = "0.1.0"
description = ""
authors = ["Elicácio C. de Farias <elicaciocardoso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
psycopg2-binary = "^2.8.6"
dynaconf = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
